--- a/pipelines/ami.yml
+++ b/pipelines/ami.yml
@@ -11,7 +11,7 @@ pipelines:
     secure_variables:
       TF_VAR_vault_token: AES:AEjuqp7+mej6N3TGtiHsTw==:mwRUYFADhRy4tLV4O3qXUHwyR94Rx7kY919+lE3UjPQ=
     stages:
-      - DEV:
+      - CREATE_AMI:
           fetch_materials: true
           environment_variables:
             env: dev
@@ -22,6 +22,19 @@ pipelines:
               tasks:
                 - exec: {command: terraform, arguments: [ "init" ], run_if: passed}
                 - exec: {command: terraform, arguments: [ "apply", "-auto-approve" ], run_if: passed}
+
+      - DELETE_RESOURCES:
+          fetch_materials: true
+          environment_variables:
+            env: dev
+          approval:
+            type: manual
+          jobs:
+            terraform-apply:
+              tasks:
+                - exec: { command: terraform, arguments: [ "init" ], run_if: passed }
+                - exec: { command: terraform, arguments: [ "state" ,"rm","aws_ami_from_instance.ami"], run_if: passed }
+                - exec: { command: terraform, arguments: [ "destroy", "-auto-approve" ], run_if: passed }
 
 
 #     - PROD:
